--- a/src/VoucherCode.css
+++ b/src/VoucherCode.css
@@ -178,7 +178,7 @@
   .mobile-hide {
     display: none;
   }
-  .footer-page2 .col-md-6 {
+  .footer-page2 .download2 {
     width: 50%;
   }
 
